<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
                android:orientation="vertical"
        >


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/stats_view__total_number_of_pages"
        />

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/stats_view__read_past_month"
            />

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/stats_view__read_past_week"
            />

    <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/stats_view__complete_reading_time_text"
            />


</LinearLayout>